pytest_full_output.txt

==================================== ERRORS ====================================
____________ ERROR collecting tests/test_hal_plugin_loader_impl.py _____________
.venv/lib/python3.13/site-packages/_pytest/python.py:498: in importtestmodule
    mod = import_path(
.venv/lib/python3.13/site-packages/_pytest/pathlib.py:587: in import_path
    importlib.import_module(module_name)
/usr/lib/python3.13/importlib/__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
.venv/lib/python3.13/site-packages/_pytest/assertion/rewrite.py:177: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
.venv/lib/python3.13/site-packages/_pytest/assertion/rewrite.py:357: in _rewrite_test
    tree = ast.parse(source, filename=strfn)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
/usr/lib/python3.13/ast.py:50: in parse
    return compile(source, filename, mode, flags,
E     File "/home/hermes/dev/ai-coffee-machine-os/tests/test_hal_plugin_loader_impl.py", line 9
E       (d / __init__.py).write_text(# pkg)
E                                   ^
E   SyntaxError: '(' was never closed
______________ ERROR collecting tests/test_hal_registry_helper.py ______________
.venv/lib/python3.13/site-packages/_pytest/python.py:498: in importtestmodule
    mod = import_path(
.venv/lib/python3.13/site-packages/_pytest/pathlib.py:587: in import_path
    importlib.import_module(module_name)
/usr/lib/python3.13/importlib/__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
.venv/lib/python3.13/site-packages/_pytest/assertion/rewrite.py:177: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
.venv/lib/python3.13/site-packages/_pytest/assertion/rewrite.py:357: in _rewrite_test
    tree = ast.parse(source, filename=strfn)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
/usr/lib/python3.13/ast.py:50: in parse
    return compile(source, filename, mode, flags,
E     File "/home/hermes/dev/ai-coffee-machine-os/tests/test_hal_registry_helper.py", line 6
E       meta = PluginMeta(name=p1, version=1.2.3, entrypoint=p1:main, description=alpha)
E                                          ^^^^^
E   SyntaxError: invalid syntax. Perhaps you forgot a comma?
______ ERROR collecting tests/test_plugin_loader_registry_integration.py _______
ImportError while importing test module '/home/hermes/dev/ai-coffee-machine-os/tests/test_plugin_loader_registry_integration.py'.
Hint: make sure your test modules/packages have valid Python names.
Traceback:
/usr/lib/python3.13/importlib/__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
tests/test_plugin_loader_registry_integration.py:2: in <module>
    from rmer_ai_coffee.hal.plugin_loader import PluginLoader, PluginLoadError
E   ImportError: cannot import name 'PluginLoadError' from 'rmer_ai_coffee.hal.plugin_loader' (/home/hermes/dev/ai-coffee-machine-os/src/rmer_ai_coffee/hal/plugin_loader.py)
=========================== short test summary info ============================
ERROR tests/test_hal_plugin_loader_impl.py
ERROR tests/test_hal_registry_helper.py
ERROR tests/test_plugin_loader_registry_integration.py
!!!!!!!!!!!!!!!!!!! Interrupted: 3 errors during collection !!!!!!!!!!!!!!!!!!!!
3 errors in 0.22s
